# Rust-Exercises

./: README.md
rust-by-practice/: Cargo.toml
rust-by-practice/tests/basic_types/char_bool_unit/: ex_1.rs  ex_2.rs  ex_3.rs  ex_4.rs  ex_5.rs  ex_6.rs  main.rs
rust-by-practice/tests/basic_types/functions/: ex_1.rs  ex_2.rs  ex_3.rs  ex_4.rs  ex_5.rs  main.rs
rust-by-practice/tests/basic_types/numbers/: ex_1.rs  ex_10.rs  ex_11.rs  ex_2.rs  ex_3.rs  ex_4.rs  ex_5.rs  ex_6.rs  ex_7.rs  ex_8.rs  ex_9.rs  main.rs
rust-by-practice/tests/basic_types/statements_expressions/: ex_1.rs  ex_2.rs  ex_3.rs  main.rs
rust-by-practice/tests/variables/: ex_1.rs  ex_2.rs  ex_3.rs  ex_4.rs  ex_5.rs  ex_6.rs  ex_7.rs  ex_8.rs  ex_9.rs  main.rs
