[package]
name = "rust-by-practice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[test]]
name = "variables"

[[test]]
name = "numbers"
path = "tests/basic_types/numbers/main.rs"

[[test]]
name = "char_bool_unit"
path = "tests/basic_types/char_bool_unit/main.rs"

[[test]]
name = "statements_expressions"
path = "tests/basic_types/statements_expressions/main.rs"

[[test]]
name = "functions"
path = "tests/basic_types/functions/main.rs"
